v2.1.1 (work in progress)
      * Add mcpl_create_outfile_mpi and mcpl_merge_outfiles_mpi utility
        functions, to handle some of the tedium needed for applications creating
        multiple MCPL files from a number of MPI processes before finally
        merging to a single file.
      * ...

v2.1.0 2024-05-17
      * This release brings an often-requested feature to MCPL: Statistics in
        the header which are automatically combined when files are merged! The
        support does not require an update of the on-disk MCPL format, but is
        handled as a convention for encoding the parameters as key-value pairs
        in comment fields in the MCPL headers, using a syntax like
        "stat:sum:<key>:<value>". The various APIs (C/Python/cmdline) have been
        updated to provide interfaces for interacting with these data items, and
        all supported operations (merge/repair/extract/...) have been updated to
        handle such entries appropriately. For a more complete introduction of
        the new feature, please refer to the documentation at the
        https://mctools.github.io/mcpl/format_statsum/ page. This fixes github
        issues #6 and #82.
      * The ssw2mcpl command now uses the new stat:sum feature to encode the
        absolute value of the ssw np1 field into a "stat:sum:ssw_np1:<value>"
        entry.
      * Add new mcpl_set_print_handler function in the C API which can be used
        to handle printouts from the MCPL library in a different manner than
        simply putting them onto stdout via a call to printf. One use-case for
        this would be for Python code using the MCPL C library (perhaps via the
        ctypes module), which can now use the new feature to redirect all
        printouts from the MCPL C library into the Python stdout streams.
      * Add support for compiled C code in python tests, allowing C code in
        tests/modules/lib_xxx/*.c to be accessed in Python test scripts in
        tests/scripts.